--- a/public/style.css
+++ b/public/style.css
@@ -50,6 +50,10 @@ label {
   margin-left: 75px;
 }
 
+.page-not-found-message {
+  margin: 30px 0px;
+}
+
 .navbar-container {
   display: flex;
   flex-direction: row;
