--- a/public/style.css
+++ b/public/style.css
@@ -125,3 +125,16 @@ label {
   flex: 1;
   text-align: end;
 }
+
+.transactions-column-container {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.transactions-column-containee {
+  flex: 1;
+  align-self: flex-start;
+}
