feat: created css classes to support coloring the container div in the SingleStock component in the appropriate color based on current price

--- a/public/style.css
+++ b/public/style.css
@@ -35,6 +35,18 @@ label {
   color: red;
 }
 
+.background-color-red {
+  background: red;
+}
+
+.background-color-green {
+  background: green;
+}
+
+.background-color-gray {
+  background: gray;
+}
+
 .text-style-bold {
   font-weight: bold;
 }
