feat: matched cursor style between a tags and buttons

--- a/public/style.css
+++ b/public/style.css
@@ -76,6 +76,7 @@ label {
   background-color: #424242;
   color: #fafafa;
   transition: background-color 0.3s;
+  cursor: pointer;
 }
 
 .btn:hover,
