--- a/public/style.css
+++ b/public/style.css
@@ -268,3 +268,39 @@ label {
     background-color: #fafafa;
   }
 }
+
+.burger-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+  right: 0;
+  top: 0;
+  height: 100%;
+}
+
+.burger-containee {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-start;
+  position: relative;
+  right: 0px;
+  top: 0px;
+  cursor: pointer;
+}
+
+.burger-caret {
+  position: relative;
+  top: 0;
+}
+
+.burger-links {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  background: #ddd;
+  min-width: 16vw;
+}
