--- a/public/style.css
+++ b/public/style.css
@@ -41,6 +41,10 @@ label {
   display: block;
 }
 
+input::placeholder {
+  color: #9e9e9e;
+}
+
 .center {
   text-align: center;
   margin: auto;
@@ -136,7 +140,7 @@ label {
 
 .spacer-vertical {
   border-left: thin solid #424242;
-  height: 350px;
+  min-height: 30rem;
   margin-left: 75px;
   margin-right: 60px;
 }
@@ -220,6 +224,7 @@ label {
 
 .portfolio-row-balance-containee {
   flex: 1;
+  align-self: flex-start;
 }
 
 .portfolio-column-container {
@@ -369,4 +374,8 @@ label {
 
 .progress .indeterminate.preloader-outer-color {
   background-color: #424242;
+}
+
+.buy-form-input {
+  width: 8em;
 }
