--- a/public/index.css
+++ b/public/index.css
@@ -49,7 +49,7 @@ input[type='text']:not(.browser-default):focus:not([readonly]),
 input[type='email']:not(.browser-default):focus:not([readonly]),
 input[type='password']:not(.browser-default):focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-color: #424242;
+  border-color: #26a69a;
   box-shadow: none;
 }
 
@@ -59,8 +59,19 @@ textarea.materialize-textarea:focus:not([readonly]) {
   width: 50%;
 }
 
+@media screen and (max-width: 1007px) {
+  form.center {
+    margin: 0px;
+    width: 100%;
+  }
+}
+
 .left {
   text-align: start;
+}
+
+.text-style-bold {
+  font-weight: bold;
 }
 
 .text-color-blue {
@@ -94,64 +105,6 @@ textarea.materialize-textarea:focus:not([readonly]) {
   animation: fade infinite 20s linear;
 }
 
-.text-style-bold {
-  font-weight: bold;
-}
-
-.btn {
-  height: 100%;
-  position: relative;
-  display: block;
-  margin: 30px auto;
-  padding: 0;
-  overflow: hidden;
-  border-width: 0;
-  outline: none;
-  border-radius: 2px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
-  background-color: #424242;
-  color: #fafafa;
-  transition: background-color 0.3s;
-  cursor: pointer;
-}
-
-.btn:hover,
-.btn:focus {
-  background-color: #616161;
-}
-
-.btn > * {
-  position: relative;
-}
-
-.btn span {
-  display: block;
-  padding: 12px 24px;
-}
-
-.btn:before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  display: block;
-  width: 0;
-  padding-top: 0;
-  border-radius: 100%;
-  background-color: rgba(236, 240, 241, 0.3);
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.btn:active:before {
-  width: 120%;
-  padding-top: 120%;
-  transition: width 0.2s ease-out, padding-top 0.2s ease-out;
-}
-
 .spacer-horizontal {
   border-bottom: thin solid #424242;
   width: 100%;
@@ -174,7 +127,8 @@ textarea.materialize-textarea:focus:not([readonly]) {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 .navbar-logo-containee {
@@ -182,13 +136,21 @@ textarea.materialize-textarea:focus:not([readonly]) {
   margin: 0;
 }
 
-.navbar-logo-navlink {
-  padding: 0;
+.navbar-logo {
+  color: #424242;
+  font-size: xx-large;
 }
 
 .navbar-logo-navlink:hover {
+  color: #424242;
   background: none;
   text-decoration: none;
+}
+
+@media screen and (max-width: 1007px) {
+  .navbar-logo-navlink {
+    padding-left: 0em;
+  }
 }
 
 .navbar-links-containee {
@@ -221,7 +183,7 @@ textarea.materialize-textarea:focus:not([readonly]) {
   flex: 1;
 }
 
-.form-btn-containee {
+.form-button-containee {
   flex: 1;
   padding: 0em;
 }
@@ -350,11 +312,18 @@ textarea.materialize-textarea:focus:not([readonly]) {
   flex-direction: column;
   position: absolute;
   background: #424242;
-  min-width: 16vw;
+  min-width: 33vw;
+  border-radius: 5px;
   z-index: 1;
 }
 
+.burger-link {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
 .burger-link:hover {
+  color: #fafafa;
   background: #616161;
 }
 
